Working on contrast issues

--- a/bountifulFoods/styles/small.css
+++ b/bountifulFoods/styles/small.css
@@ -49,7 +49,7 @@ header
 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #8c86aa;
+    background-color: #716c8b;
     color: #ffffff;
     padding: .5em;
     text-align: center;
